--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,9 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-.pnpm-store
-.pnpm-files
 dist
 dist-ssr
+coverage
 *.local
 
 # Editor directories and files
