--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "coverage": "lerna run coverage",
         "format": "lerna run format",
         "build": "lerna run build",
         "clean": "lerna run clean",
@@ -17,31 +18,36 @@
     "packageManager": "pnpm@10.6.2",
     "dependencies": {
         "@eslint/js": "^9.21.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
+        "@types/jest": "^29.5.14",
+        "@types/node": "^22.13.10",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
-        "@vitejs/plugin-react": "^4.3.4",
-        "eslint": "^9.21.0",
-        "eslint-plugin-react": "^7.37.4",
-        "eslint-plugin-react-refresh": "^0.4.19",
-        "globals": "^15.15.0",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "typescript": "~5.7.2",
-        "vite": "^6.2.0",
-        "vite-plugin-dts": "^4.5.3",
-        "@types/node": "^22.13.10",
         "@typescript-eslint/parser": "^8.26.1",
+        "@vitejs/plugin-react": "^4.3.4",
+        "@vitest/ui": "^3.0.8",
+        "eslint": "^9.21.0",
         "eslint-config-prettier": "^10.1.1",
         "eslint-import-resolver-typescript": "^3.8.4",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-prettier": "^5.2.3",
+        "eslint-plugin-react": "^7.37.4",
         "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
         "eslint-plugin-unused-imports": "^4.1.4",
+        "globals": "^15.15.0",
         "lerna": "^8.2.1",
         "prettier": "^3.5.3",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "rimraf": "^6.0.1",
+        "typescript": "~5.7.2",
         "typescript-eslint": "^8.26.0",
-        "vite-tsconfig-paths": "^5.1.4"
+        "vite": "^6.2.0",
+        "vite-plugin-dts": "^4.5.3",
+        "vite-tsconfig-paths": "^5.1.4",
+        "vitest": "^3.0.8"
     }
 }
