update clean script in storybook package.json to remove storybook-static directory

--- a/storybook/package.json
+++ b/storybook/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "lint": "eslint .",
-        "clean": "rimraf dist",
+        "clean": "rimraf dist && rimraf storybook-static",
         "preview": "vite preview",
         "dev": "storybook dev -p 3000",
         "build": "storybook build"
