update clean script in package.json to remove coverage directory and adjust test setup path

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,10 +17,10 @@
     "types": "./dist/index.d.ts",
     "sideEffects": false,
     "scripts": {
+        "clean": "rimraf dist && rimraf coverage",
         "coverage": "vitest run --coverage",
         "build": "tsc -b && vite build",
         "format": "prettier --write .",
-        "clean": "rimraf dist",
         "test": "vitest --ui",
         "lint": "eslint ."
     },
