--- a/packages/pixui/package.json
+++ b/packages/pixui/package.json
@@ -1,13 +1,33 @@
 {
-  "name": "@pixelizio/pixui",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.6.2"
+    "name": "@pixelizio/pixui",
+    "version": "1.0.0",
+    "type": "module",
+    "files": [
+        "dist"
+    ],
+    "main": "./dist/index.umd.cjs",
+    "module": "./dist/index.es.js",
+    "exports": {
+        ".": {
+            "import": "./dist/index.es.js",
+            "require": "./dist/index.umd.cjs"
+        }
+    },
+    "types": "./dist/index.d.ts",
+    "sideEffects": false,
+    "scripts": {
+        "clean": "rimraf dist && rimraf coverage",
+        "coverage": "vitest run --coverage",
+        "build": "tsc -b && vite build",
+        "format": "prettier --write .",
+        "test": "vitest --ui",
+        "lint": "eslint ."
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "packageManager": "pnpm@10.6.2",
+    "dependencies": {
+        "@pixelizio/core": "workspace:^"
+    }
 }
