--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "eslint-plugin-react-refresh": "^0.4.19",
         "eslint-plugin-unused-imports": "^4.1.4",
         "globals": "^15.15.0",
+        "happy-dom": "^17.4.4",
         "lerna": "^8.2.1",
         "prettier": "^3.5.3",
         "react": "^19.0.0",
