--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "packageManager": "pnpm@10.6.2",
     "dependencies": {
+        "@babel/runtime": "^7.26.10",
         "@eslint/js": "^9.21.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
