--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "license": "ISC",
     "packageManager": "pnpm@10.6.2",
     "dependencies": {
-        "@babel/runtime": "^7.26.10",
         "@eslint/js": "^9.21.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
@@ -51,5 +50,8 @@
         "vite-plugin-dts": "^4.5.3",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.0.8"
+    },
+    "devDependencies": {
+        "@babel/runtime": "^7.26.10"
     }
 }
