fixed (#1) Babel has inefficient RexExp complexity in generated code with .replace when transpiling named capturing groups

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "vitest": "^3.0.8"
     },
     "devDependencies": {
+        "@babel/helpers": "^7.26.10",
         "@babel/runtime": "^7.26.10"
     }
 }
