--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "packageManager": "pnpm@10.6.2",
     "dependencies": {
         "@eslint/js": "^9.21.0",
+        "@tailwindcss/vite": "^4.0.13",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@types/jest": "^29.5.14",
@@ -41,9 +42,11 @@
         "happy-dom": "^17.4.4",
         "lerna": "^8.2.1",
         "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.11",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "rimraf": "^6.0.1",
+        "tailwindcss": "^4.0.13",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.26.0",
         "vite": "^6.2.0",
