add Button component with variants and styles, update package.json to include @radix-ui/react-slot

--- a/packages/pixui/package.json
+++ b/packages/pixui/package.json
@@ -30,6 +30,7 @@
     "license": "ISC",
     "packageManager": "pnpm@10.6.2",
     "dependencies": {
-        "@pixelizio/core": "workspace:^"
+        "@pixelizio/core": "workspace:^",
+        "@radix-ui/react-slot": "^1.1.2"
     }
 }
